// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IssueFilingButtonTest onclick: invalid settings, %s 1`] = `
<DocumentFragment>
  <button
    class="ms-Button ms-Button--default file-issue-button root-109"
    data-is-focusable="true"
    type="button"
  >
    <span
      class="ms-Button-flexContainer flexContainer-110"
      data-automationid="splitbuttonprimary"
    >
      <mock-ladybugsolidicon />
      <div
        class="ms-Button-label"
      >
        File issue
      </div>
    </span>
  </button>
  <mock-issuefilingneedssettingshelptext
    deps="[object Object]"
    isopen=""
    issuefilingservicepropertiesmap="[object Object]"
    selectedissuedata="[object Object]"
    selectedissuefilingservice="[object Object]"
    selectedissuefilingservicedata="[object Object]"
  />
</DocumentFragment>
`;

exports[`IssueFilingButtonTest onclick: valid settings, file bug and set %s to false 1`] = `
<DocumentFragment>
  <button
    class="ms-Button ms-Button--default file-issue-button root-109"
    data-is-focusable="true"
    type="button"
  >
    <span
      class="ms-Button-flexContainer flexContainer-110"
      data-automationid="splitbuttonprimary"
    >
      <mock-ladybugsolidicon />
      <div
        class="ms-Button-label"
      >
        File issue
      </div>
    </span>
  </button>
  <mock-issuefilingneedssettingshelptext
    deps="[object Object]"
    issuefilingservicepropertiesmap="[object Object]"
    selectedissuedata="[object Object]"
    selectedissuefilingservice="[object Object]"
    selectedissuefilingservicedata="[object Object]"
  />
</DocumentFragment>
`;

exports[`IssueFilingButtonTest render: isSettingsValid: false 1`] = `
<DocumentFragment>
  <mock-customizeddefaultbutton
    class="file-issue-button"
  >
    <mock-ladybugsolidicon />
    <div
      class="ms-Button-label"
    >
      File issue
    </div>
  </mock-customizeddefaultbutton>
  <mock-issuefilingneedssettingshelptext
    deps="[object Object]"
    issuefilingservicepropertiesmap="[object Object]"
    selectedissuedata="[object Object]"
    selectedissuefilingservice="[object Object]"
    selectedissuefilingservicedata="[object Object]"
  />
</DocumentFragment>
`;

exports[`IssueFilingButtonTest render: isSettingsValid: true 1`] = `
<DocumentFragment>
  <mock-customizeddefaultbutton
    class="file-issue-button"
  >
    <mock-ladybugsolidicon />
    <div
      class="ms-Button-label"
    >
      File issue
    </div>
  </mock-customizeddefaultbutton>
  <mock-issuefilingneedssettingshelptext
    deps="[object Object]"
    issuefilingservicepropertiesmap="[object Object]"
    selectedissuedata="[object Object]"
    selectedissuefilingservice="[object Object]"
    selectedissuefilingservicedata="[object Object]"
  />
</DocumentFragment>
`;
